NetworkManager-vpnc: Autospec creation for update from version 1.2.8 to version 1.4.0
Alan Mortensen (1):
      Update Danish translation

Aleksandr Melman (1):
      Update Russian translation

Anders Jonsson (1):
      Update Swedish translation

Andika Triwidada (1):
      Update Indonesian translation

Andre Klapper (1):
      DOAP: Replace defunct mailing list with GNOME Discourse URL

Asier Sarasua Garmendia (2):
      Update Basque translation
      Update Basque translation

Aurimas Černius (1):
      Update Lithuanian translation

Balázs Úr (1):
      Update Hungarian translation

Boyuan Yang (1):
      Update Chinese (China) translation

Daniel Mustieles (1):
      Update Spanish translation

Emin Tufan Çetin (1):
      Update Turkish translation

Florentina Mușat (1):
      Update Romanian translation

Goran Vidović (2):
      Update Croatian translation
      Update Croatian translation

Jonathan Kang (1):
      properties: Don't set interface name as empty string by default

Jordi Mas (1):
      Update Catalan translation

Juliano de Souza Camargo (1):
      Update Brazilian Portuguese translation

Jürgen Benvenuti (1):
      Update German translation

Lubomir Rintel (12):
      release: bump version to 1.2.9 (development)
      appdata: Add extends for new gnome-control-center name
      doap: update
      build: deal with some autoconf warnings
      build: replace intltool with gettext
      all: drop libnm-glib version
      build: bump required libnma version
      gitlab: fix a comment
      gitlab: enable gtk4 testing
      ChangeLog: drop
      NEWS: update
      release: bump version to 1.4.0

Marek Černocký (1):
      Updated Czech translation

Martin (2):
      Update Slovenian translation
      Update Slovenian translation

Matheus Barbosa (1):
      Update Brazilian Portuguese translation

Nathan Follens (1):
      Update Dutch translation

Piotr Drąg (1):
      Update Polish translation

Sabri Ünal (1):
      Update Turkish translation

Sc

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,21 @@
 =======================================================
+NetworkManager-vpnc-1.4.0
+Overview of changes since NetworkManager-vpnc-1.2.8
+=======================================================
+
+This is a new stable release of NetworkManager-vpnc.  Notable changes include:
+
+* Added support for configuring MTU.
+* Added support for more secure DH groups.
+* Added options to relax security for old insecure gateways.
+* Added support for Fortigate vendor-specific compatibility quirks.
+* Removed obsolete libm-glib support.
+* Updated Basque, Brazilian Portuguese, Catalan, Chinese, Croatian, Czech,
+  Danish, Dutch, Georgian, German, Hindi, Hungarian, Indonesian, Lithuanian,
+  Polish, Romanian, Russian, Serbian, Slovenian, Spanish, Swedish, Turkish
+  and Ukrainian translations.
+
+=======================================================
 NetworkManager-vpnc-1.2.8
 Overview of changes since NetworkManager-vpnc-1.2.6
 =======================================================
